--- a/css/hero.css
+++ b/css/hero.css
@@ -22,7 +22,7 @@
   display: none;
 }
 .contacts__item:not(:last-child) {
-  margin-bottom: .2rem;
+  margin-bottom: 0.2rem;
 }
 .contacts__item-text {
   font-size: 0;
@@ -34,7 +34,7 @@ a.contacts__item-text {
   display: flex;
   align-items: center;
   font-size: 1.2rem;
-  border: .1rem solid var(--main-text-color);
+  border: 0.1rem solid var(--main-text-color);
   font-family: var(--title-font);
   text-transform: uppercase;
   padding: 1rem 1.5rem 1rem 2rem;
@@ -46,7 +46,7 @@ a.contacts__item-text {
   display: block;
   content: '';
   position: absolute;
-  width: .1rem;
+  width: 0.1rem;
   height: 100%;
   background-color: var(--main-text-color);
   top: 0;
@@ -73,11 +73,12 @@ a.contacts__item-text {
 }
 
 @media screen and (min-width: 1440px) {
-  .header, .footer {
+  .header,
+  .footer {
     border: none;
   }
   .hero {
-    padding: 10rem 2rem;
+    padding: 10rem 2rem 2rem;
     text-align: left;
   }
   .hero__block {
@@ -122,7 +123,7 @@ a.contacts__item-text {
   }
   .hero__btn {
     margin-left: 0;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
   }
   .hero__btn:hover {
     transform: scale(1.1);
